--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:20-alpine
 WORKDIR /app
+COPY package*.json ./
+RUN npm install --production
 COPY . .
-RUN npm install
 EXPOSE 5000
 CMD ["node", "index.js"]
