--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -1,22 +1,32 @@
 steps:
   # Step 1: Install dependencies
-  - name: "gcr.io/cloud-builders/nodejs:18"
+  - name: "gcr.io/cloud-builders/npm"
     entrypoint: bash
     args:
       - -c
       - |
-        echo "Installing dependencies..."
-        npm install
+        if [ ! -d "node_modules" ]; then
+          echo "Installing dependencies..."
+          npm ci
+        else
+          echo "Skipping npm install, node_modules exists."
+        fi
     dir: "frontend"
+    volumes:
+      - name: "npm-cache"
+        path: /root/.npm
 
   # Step 2: Build frontend
-  - name: "gcr.io/cloud-builders/nodejs:18"
+  - name: "gcr.io/cloud-builders/npm"
     entrypoint: bash
     args:
       - -c
       - |
         npm run build
     dir: "frontend"
+    volumes:
+      - name: "npm-cache"
+        path: /root/.npm
 
   # Step 3: Deploy ke App Engine
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
