--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -16,7 +16,7 @@ steps:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 2: Build with OpenSSL legacy provider (Fix Node 17+ error)
+  # Step 2: Build with OpenSSL legacy provider
   - name: "gcr.io/cloud-builders/npm"
     env:
       - NODE_OPTIONS=--openssl-legacy-provider
@@ -26,10 +26,19 @@ steps:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 3: Deploy ke App Engine
+  # Step 3: Copy build output to root
+  - name: "gcr.io/cloud-builders/gsutil"
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        echo "Moving frontend/build/* to /workspace/frontend"
+        cp -r frontend/build/* frontend/
+
+  # Step 4: Deploy static frontend
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
-    args: ["app", "deploy", "--quiet"]
+    args: ["app", "deploy", "--quiet", "app.yaml"]
     dir: "frontend"
 
 options:
