--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,3 +1,14 @@
-runtime: nodejs20
-service: fe-notes-fikriastamaa
+runtime: nodejs18
 instance_class: F1
+
+env_variables:
+  NODE_OPTIONS: --openssl-legacy-provider
+
+handlers:
+  - url: /
+    static_files: build/index.html
+    upload: build/index.html
+
+  - url: /(.*)
+    static_files: build/\1
+    upload: build/(.*)
