--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -16,11 +16,14 @@ steps:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 2: Build with OpenSSL legacy provider
+    # Step 2: Build with OpenSSL legacy provider
   - name: "gcr.io/cloud-builders/npm"
-    env:
-      - NODE_OPTIONS=--openssl-legacy-provider
-    args: ["run", "build"]
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        echo "Running build with legacy OpenSSL support..."
+        NODE_OPTIONS=--openssl-legacy-provider npm run build
     dir: "frontend"
     volumes:
       - name: "npm-cache"
