--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,14 +1,10 @@
-runtime: nodejs18
-instance_class: F1
-
-env_variables:
-  NODE_OPTIONS: --openssl-legacy-provider
+runtime: static
 
 handlers:
   - url: /
-    static_files: build/index.html
-    upload: build/index.html
+    static_files: index.html
+    upload: index.html
 
   - url: /(.*)
-    static_files: build/\1
-    upload: build/(.*)
+    static_files: \1
+    upload: (.*)
