--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,8 +1,6 @@
-runtime: nodejs18
+runtime: nodejs16
 instance_class: F1
-
-env_variables:
-  NODE_OPTIONS: --openssl-legacy-provider
+env: standard
 
 handlers:
   - url: /
@@ -11,4 +9,4 @@ handlers:
 
   - url: /(.*)
     static_files: build/\1
-    upload: build/(.*)
+    upload: build/.*
