--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,12 +1,8 @@
-runtime: nodejs16
+runtime: nodejs18
 instance_class: F1
-env: standard
-
 handlers:
-  - url: /
-    static_files: build/index.html
-    upload: build/index.html
-
   - url: /(.*)
     static_files: build/\1
-    upload: build/.*
+    upload: build/(.*)
+  - url: /
+    static_dir: build
