--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,8 +1,8 @@
-runtime: nodejs18
-instance_class: F1
+runtime: nodejs16
 handlers:
-  - url: /(.*)
-    static_files: build/\1
-    upload: build/(.*)
   - url: /
-    static_dir: build
+    static_files: index.html
+    upload: index.html
+  - url: /(.*)
+    static_files: \1
+    upload: .*
