--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -1,35 +1,38 @@
 steps:
-  # Step 1: Install dependencies (dengan cache)
+  # Step 1: Install dependencies
   - name: "gcr.io/cloud-builders/npm"
     entrypoint: bash
     args:
       - -c
       - |
-        echo "Installing dependencies..."
-        npm install
+        if [ ! -d "node_modules" ]; then
+          echo "Installing dependencies..."
+          npm ci
+        else
+          echo "Skipping npm install, node_modules exists."
+        fi
     dir: "frontend"
     volumes:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 2: Build dengan OpenSSL legacy provider
+  # Step 2: Build frontend
   - name: "gcr.io/cloud-builders/npm"
     entrypoint: bash
     args:
       - -c
       - |
-        echo "Building frontend..."
-        NODE_OPTIONS=--openssl-legacy-provider npm run build
+        npm run build
     dir: "frontend"
     volumes:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 3: Deploy hanya folder build/
+  # Step 3: Deploy ke App Engine
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
     args: ["app", "deploy", "--quiet"]
-    dir: "frontend/build"
+    dir: "frontend"
 
 options:
   logging: CLOUD_LOGGING_ONLY
