--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,8 +1,3 @@
-runtime: nodejs16
-handlers:
-  - url: /
-    static_files: index.html
-    upload: index.html
-  - url: /(.*)
-    static_files: \1
-    upload: .*
+runtime: nodejs20
+service: fe-notes-fikriastamaa
+instance_class: F1
