--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -1,39 +1,12 @@
 steps:
-  # Step 1: Install dependencies
-  - name: "gcr.io/cloud-builders/npm"
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        if [ ! -d "node_modules" ]; then
-          echo "Installing dependencies..."
-          npm ci
-        else
-          echo "Skipping npm install, node_modules exists."
-        fi
-    dir: "frontend"
-    volumes:
-      - name: "npm-cache"
-        path: /root/.npm
-
-  # Step 2: Build frontend (FIXED with legacy provider)
-  - name: "gcr.io/cloud-builders/npm"
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        echo "Building with OpenSSL legacy provider..."
-        NODE_OPTIONS=--openssl-legacy-provider npm run build
-    dir: "frontend"
-    volumes:
-      - name: "npm-cache"
-        path: /root/.npm
-
-  # Step 3: Deploy ke App Engine
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-    entrypoint: gcloud
-    args: ["app", "deploy", "--quiet"]
-    dir: "frontend"
+    entrypoint: "bash"
+    args:
+      [
+        "-c",
+        "gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy",
+      ]
+timeout: "1600s"
 
 options:
   logging: CLOUD_LOGGING_ONLY
