--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -7,7 +7,7 @@ steps:
       - |
         if [ ! -d "node_modules" ]; then
           echo "Installing dependencies..."
-          npm ci
+          npm install
         else
           echo "Skipping npm install, node_modules exists."
         fi
@@ -16,13 +16,11 @@ steps:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 2: Build frontend
+  # Step 2: Build with OpenSSL legacy provider (Fix Node 17+ error)
   - name: "gcr.io/cloud-builders/npm"
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        npm run build
+    env:
+      - NODE_OPTIONS=--openssl-legacy-provider
+    args: ["run", "build"]
     dir: "frontend"
     volumes:
       - name: "npm-cache"
