--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -7,7 +7,7 @@ steps:
       - |
         if [ ! -d "node_modules" ]; then
           echo "Installing dependencies..."
-          npm install
+          npm ci
         else
           echo "Skipping npm install, node_modules exists."
         fi
@@ -16,11 +16,13 @@ steps:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 2: Build with OpenSSL legacy provider (Fix Node 17+ error)
+  # Step 2: Build frontend
   - name: "gcr.io/cloud-builders/npm"
-    env:
-      - NODE_OPTIONS=--openssl-legacy-provider
-    args: ["run", "build"]
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        npm run build
     dir: "frontend"
     volumes:
       - name: "npm-cache"
