--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -1,38 +1,35 @@
 steps:
-  # Step 1: Install dependencies
+  # Step 1: Install dependencies (dengan cache)
   - name: "gcr.io/cloud-builders/npm"
     entrypoint: bash
     args:
       - -c
       - |
-        if [ ! -d "node_modules" ]; then
-          echo "Installing dependencies..."
-          npm ci
-        else
-          echo "Skipping npm install, node_modules exists."
-        fi
+        echo "Installing dependencies..."
+        npm install
     dir: "frontend"
     volumes:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 2: Build frontend
+  # Step 2: Build dengan OpenSSL legacy provider
   - name: "gcr.io/cloud-builders/npm"
     entrypoint: bash
     args:
       - -c
       - |
-        npm run build
+        echo "Building frontend..."
+        NODE_OPTIONS=--openssl-legacy-provider npm run build
     dir: "frontend"
     volumes:
       - name: "npm-cache"
         path: /root/.npm
 
-  # Step 3: Deploy ke App Engine
+  # Step 3: Deploy hanya folder build/
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
     args: ["app", "deploy", "--quiet"]
-    dir: "frontend"
+    dir: "frontend/build"
 
 options:
   logging: CLOUD_LOGGING_ONLY
