--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -7,7 +7,7 @@ steps:
       - |
         if [ ! -d "node_modules" ]; then
           echo "Installing dependencies..."
-          npm install
+          npm ci
         else
           echo "Skipping npm install, node_modules exists."
         fi
