--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -1,22 +1,22 @@
 steps:
-  # 1. Build Docker Images untuk backend
+  - name: "gcr.io/cloud-builders/gsutil"
+    args: ["cp", "${_ENV}", "backend/.env"]
+
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/be-notes-fikriastamaa", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/be-auth-fikri", "."]
     dir: "backend"
 
-  # 2. Push ke Container Registry / Artifact Registry
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/be-notes-fikriastamaa"]
+    args: ["push", "gcr.io/$PROJECT_ID/be-auth-fikri"]
 
-  # 3. Deploy ke Cloud Run
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
         "run",
         "deploy",
-        "be-notes-fikriastamaa",
+        "be-auth-fikri",
         "--image",
-        "gcr.io/$PROJECT_ID/be-notes-fikriastamaa",
+        "gcr.io/$PROJECT_ID/be-auth-fikri",
         "--timeout",
         "1000s",
         "--port",
@@ -26,7 +26,5 @@ steps:
         "--allow-unauthenticated",
       ]
 
-# Log hanya akan disimpan di Google Cloud Logging
-# Log tidak akan disimpan di Google Cloud Storage (butuh hak akses).
 options:
   logging: CLOUD_LOGGING_ONLY
