--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,2 +1,7 @@
-runtime: nodejs20
-service: fe-auth-fikri
+runtime: nodejs
+env: standard
+
+automatic_scaling:
+  target_cpu_utilization: 0.65
+  min_instances: 1
+  max_instances: 10 # Sesuaikan dengan jumlah yang sesuai
