--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,7 +1,6 @@
-runtime: nodejs
+runtime: nodejs18
 env: standard
-
 automatic_scaling:
   target_cpu_utilization: 0.65
   min_instances: 1
-  max_instances: 10 # Sesuaikan dengan jumlah yang sesuai
+  max_instances: 10
